MSEDO-211 - Panel can now be collapsed clicking on it and css is fixed

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -413,3 +413,27 @@ global styles
   background: #f6f6f6;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 }
+
+.panel-content-wrapper {
+  left: 0;
+  right: 8.79%;
+  top: 43.12%;
+  bottom: 52.12%;
+
+  background: #ffffff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+}
+
+.card {
+  left: 0;
+  right: 6.84%;
+  top: 38.8%;
+  bottom: 44.44%;
+
+  background: #ffffff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 2%;
+  border-radius: 4px !important;
+  border: none !important;
+}
